MODSHSLIDE-114 #resolve #comment Navigation vertical alignment

--- a/code/media/mod_jsshackslides/css/jsshackslides.css
+++ b/code/media/mod_jsshackslides/css/jsshackslides.css
@@ -133,9 +133,7 @@
 	opacity: 0;
 	position: absolute;
 	width: 100%;
-	bottom: 0;
 	left: 0;
-	text-align: center;
 	-webkit-tap-highlight-color: transparent;
 	font-size: 0;
 	height: 10px;
